src/components/BeachPage/BeachInfo/styles.module.css
.container{
    background-color: white;
    
}

.description{
    font-size: 14px;
    margin: 0 24px 24px 24px;
    line-height: 20px;
    white-space: pre-line;
    overflow-wrap: break-word;
}

.helper {
    font-size: 12px;
    margin: 0px 24px;
}

.entryMap {
    margin: 16px;
    border-radius: 8px;
    height: 240px;
    background-size: cover;
    display:flex;
    justify-content: flex-end;
    flex-direction: column;
    position: relative;
    overflow: hidden;
    padding: 12px;
    background-position-y: center;
}

.tideRowHeader {
    font-weight: var(--text-weight-bold);
}

.tideContainer {
    display: flex;
    margin: 8px 24px 0;
    overflow: scroll;
}

.tideRow {
    margin-right: 8px;
    display: flex;
    flex: 1 0 164px;
    flex-direction: column;
    border: 1px solid #cecece;
    border-radius: 8px;
    padding: 8px;
    text-align: center;
}

.tideImage {
    margin: 8px 0;
}

.past {
    color: var(--text-secondary);
    font-style: italic;
}

.tideItem {
    flex: 1;
}

.tideItem:first-child {
    padding-left: 0;
}

.viewButton {
    outline: none;
    background-color: white;
    color: var(--primary-color);
    border: 2px var(--primary-color) solid;
    border-radius: 8px;
    padding: 12px 0;
    display: block;
    z-index: 2;
    width: 100%;
    text-align: center;
}

.overlay {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background: rgba(0,0,0,.2);
    height: 100%;
}

.outerSpacer {
    margin: 0 24px
}

.tagHeader {
    font-weight: var(--text-weight-bold);
    font-size: 12px;
    margin-bottom: 4px;
}

